--- a/styles/clock.css
+++ b/styles/clock.css
@@ -40,7 +40,7 @@ a {
   transition: 0;
 }
 #chiming {
-  position: absolute;
+  position: fixed;
   bottom:1pt;
   right: 1pt;
 }
@@ -67,7 +67,7 @@ a {
   background-color: var(--foreground-color);
 }
 #menu {
-  position: absolute;
+  position: fixed;
   bottom:1pt;
   left: 1pt;
 }
