--- a/styles/clock.css
+++ b/styles/clock.css
@@ -18,14 +18,36 @@ body {
   background-color: var(--background-color);
   color: var(--foreground-color);
   overflow: hidden;
+  display: table;
 }
 a {
   color: inherit;
   text-decoration: underline;
 }
 #root-container {
+  display: table-cell;
   position: relative;
   text-align: center;
+  vertical-align: middle;
+}
+#clock {
+  position: absolute;
+  transform: translateX(-50%);
+}
+#logo-container {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+img.logo {
+  visibility: hidden;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  min-height: 15%;
+  max-width: 33%;
+  transform: translateX(-50%) translateY(-50%);
 }
 .menu-box {
   border-color: 1px solid var(--foreground-color);
@@ -114,13 +136,4 @@ input[type="file"] {
   text-align: center;
   border-color: var(--foreground-color);
   border-radius: 5pt;
-}
-img.logo {
-  visibility: hidden;
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  min-height: 15%;
-  max-width: 40%;
-  transform: translateX(-50%) translateY(-50%);
 }
